prevents overflow on body

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ GitHub: https://github.com/duiker101/pokemon-type-svg-icons
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 body {
   font-family: 'Lato', sans-serif;
+  overflow: hidden;
 }
 
 .icon {
